Fixed CheckInServiceTests